# UTEC-PFC-RPi5-RA

./: .gitignore  .~lock.robot_log_2025-12-03_18-35-30.csv#  README.md  init.sh  robot_data_log.csv
src/control_pkg/: CMakeLists.txt  package.xml
src/control_pkg/launch/: pfc_bringup.launch.py
src/control_pkg/src/: point_control_node.cpp  system_id_logger.cpp  system_id_logger_legacy.cpp
src/gps_pkg/: CMakeLists.txt  package.xml
src/gps_pkg/launch/: gps_system.launch.py
src/gps_pkg/rviz/: gps_config.rviz
src/gps_pkg/scripts/: gps_path_node.py  plotter.py  visualizer_node.py
src/gps_pkg/src/: gps_node.cpp  magnetometer_node.cpp
src/imu_fusion_cpp/: CMakeLists.txt  package.xml
src/imu_fusion_cpp/config/: slip_fusion.yaml
src/imu_fusion_cpp/launch/: imu_system.launch.py
src/imu_fusion_cpp/src/: lateral_imu_processor.cpp  multi_imu_driver.cpp  slip_estimator_node.cpp
src/imu_fusion_pkg/: package.xml  setup.cfg  setup.py
src/imu_fusion_pkg/imu_fusion_pkg/: gps_node.py  imu_filter_node.py  imu_fusion_node.py  imu_node.py  imu_reader_node.py  mpu6050_driver.py  position_estimator_node.py
src/imu_serial/: package.xml  setup.py
src/imu_serial/imu_serial/: imu_6050_serial_node.py  imu_9250_serial_node.py  imu_BNO08X_serial_node.py  imu_odometry_demo.py
src/ros2_roboclaw_driver/: .clang-format  .editorconfig  20250902_log.txt  CMakeLists.txt  CMakeLists.txt.backup  package.xml  plan_v2.md
src/ros2_roboclaw_driver/config/: motor_driver.yaml
src/ros2_roboclaw_driver/include/ros2_roboclaw_driver/: RoboClaw.h  motor_driver.h  roboclaw_cmd.h  roboclaw_cmd_do_buffered_m1m2_drive_speed_accel_distance.h  roboclaw_cmd_read_encoder.h  roboclaw_cmd_read_encoder_speed.h  roboclaw_cmd_read_encoder_values.h  roboclaw_cmd_read_firmware_version.h  roboclaw_cmd_read_logic_battery_voltage.h  roboclaw_cmd_read_main_battery_voltage.h  roboclaw_cmd_read_motor_currents.h  roboclaw_cmd_read_motor_velocity_pidq.h  roboclaw_cmd_read_speed_m1.h  (+4 more)
src/ros2_roboclaw_driver/launch/: ros2_roboclaw_driver.launch.py  square_test.launch.py
src/ros2_roboclaw_driver/msg/: RoboClawStatus.msg
src/ros2_roboclaw_driver/src/: RoboClaw.cpp  motor_driver.cpp  motor_driver_node.cpp
